--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,12 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
+.env*.local
+.env.production
+
+
+# local env files
 .env*.local
 
 # vercel
@@ -34,5 +40,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+.vercel
 
 .vercel
