--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dialectics",
+  "name": "dialectics-center",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,6 +13,7 @@
     "@clerk/clerk-react": "^4.14.1",
     "@clerk/nextjs": "^5.6.0",
     "@heroicons/react": "^2.1.5",
+    "@sentry/nextjs": "^8.32.0",
     "cors": "^2.8.5",
     "mongodb": "^6.9.0",
     "next": "14.2.12",
