--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,9 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_live_Y2xlcmsuZGlhbGVjdGljcy5jZW50ZXIk
-CLERK_SECRET_KEY=sk_live_89he8bOZmnfWbzc5LnpK26kSst4s33Sex7jXludKGW
-NEXT_PUBLIC_CLERK_FRONTEND_API=https://clerk.horistics.com
-API_URL=https://api.horistics.com/api/search
+CLERK_SECRET_KEY=sk_live_io3WxqGDtOJIecXQFKPSf4gQhG3ihdoXK9S4yoAJW0
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_FRONTEND_API=https://clerk.dialectics.com
+API_URL=https://api.dialectics.com/api/search
 EMAIL_USER=declare.request@gmail.com
 EMAIL_PASS=vikp mlaq duuf fals
 MONGODB_URI_REMOTE=mongodb+srv://hellas:dJF4RSBR43PRJVDD@hellas.l1n6p.mongodb.net/hellas?retryWrites=true&w=majority
