--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/clerk-react": "^4.14.1",
     "@clerk/nextjs": "^5.6.0",
     "@heroicons/react": "^2.1.5",
+    "@sentry/browser": "^8.32.0",
     "@sentry/nextjs": "^8.32.0",
     "cors": "^2.8.5",
     "mongodb": "^6.9.0",
