Disable Next.js build cache for fresh deployment

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "clean": "rimraf .next",
     "dev": "next dev",
-    "build": "next build",
+    "build": "NEXT_BUILD_CACHE=false next build",
     "start": "next start",
     "lint": "next lint"
   },
